# chip8

./: Cargo.toml  README.md
crates/chip8-lib/: Cargo.toml
crates/chip8-lib/src/: lib.rs
crates/chip8-web/: Cargo.toml  index.html
crates/chip8-web/src/: lib.rs
docs/: chip8_web.d.ts  chip8_web.js  chip8_web_bg.wasm  chip8_web_bg.wasm.d.ts  index.html  package.json
